--- a/res/layout/principal.xml
+++ b/res/layout/principal.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cadastrar"
-            android:textSize="15dp" 
+            android:textSize="15sp" 
             android:onClick="abreCadastro"/>
 
         <Button
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/listar"
-            android:textSize="15dp" 
+            android:textSize="15sp" 
             android:onClick="abreLista"/>
     </TableLayout>
 
