--- a/res/layout/produto_list.xml
+++ b/res/layout/produto_list.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="5sp"
-            android:textColor="@color/CinzaEscuro"
+            android:textColor="@color/CinzaClaro"
             android:textSize="15sp"/>
 
         <TextView
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="40sp"
-            android:textColor="@color/CinzaEscuro"
+            android:textColor="@color/CinzaClaro"
             android:textSize="15sp"/>
         
         <TextView
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="40sp"
-            android:textColor="@color/CinzaEscuro"
+            android:textColor="@color/CinzaClaro"
             android:textSize="15sp"/>
     </LinearLayout>
 
