Vendas funcionando, gravando documentos de acordo com numero de parcelas exigidos. Lista de documentos a vencer com opção para marcar documentos como faturados.

--- a/res/layout/lista.xml
+++ b/res/layout/lista.xml
@@ -7,7 +7,7 @@ android:orientation="vertical"
 android:background="@color/CinzaClaro"
 >
         <ListView
-        android:id="@+id/listacliente"
+        android:id="@+id/lista"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@android:color/white"
