--- a/res/layout/principal.xml
+++ b/res/layout/principal.xml
@@ -113,14 +113,14 @@
             android:src="@drawable/notes" />
 
         <ImageButton
-            android:id="@+id/configuracoes"
+            android:id="@+id/receber"
             android:layout_width="80dp"
             android:layout_height="70dp"
             android:background="@android:color/transparent"
-            android:contentDescription="@string/cancelar"
+            android:contentDescription="@string/receber"
             android:onClick="executaOpcao"
             android:scaleType="centerInside"
-            android:src="@drawable/settings" />
+            android:src="@drawable/receber" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="fill_parent"
@@ -132,7 +132,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
             android:text="@string/categorias"
             android:textColor="@color/CinzaEscuro" />
 
@@ -140,14 +139,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginRight="30dp"
             android:text="@string/relatorios"
             android:textColor="@color/CinzaEscuro" />
     
     	<TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/configuracoes"
+            android:text="@string/receber"
             android:textColor="@color/CinzaEscuro"/>
     </LinearLayout>
     <TextView 
